--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+clap = { version = "4.5.52", features = ["derive"] }
+env_logger = "0.11.8"
+ignore = "0.4.25"
+log = "0.4.28"
+web-image-meta = "0.2.1"
