--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,12 @@ unused_unsafe = "warn"
 all = { level = "warn", priority = -1 }
 
 [dependencies]
-anyhow = "1.0.100"
-clap = { version = "4.5.52", features = ["derive"] }
-env_logger = "0.11.8"
-ignore = "0.4.25"
-log = "0.4.28"
-web-image-meta = "0.2.1"
+anyhow = "=1.0.100"
+clap = { version = "=4.5.52", features = ["derive"] }
+env_logger = "=0.11.8"
+ignore = "=0.4.25"
+log = "=0.4.28"
+web-image-meta = "=0.2.1"
 
 [profile.dev]
 debug = false
